# Prisma-Client-Rust-Actix-Web-Async-Graphql

./: Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: example.rs  lib.rs  main.rs  prisma.rs
src/features/: graphql.rs
src/features/post/graphql/: mutation.rs  query.rs  types.rs
src/features/user/graphql/: mutation.rs  query.rs  types.rs
